2011-12-02  6.7.3-11 Anthony  <A.Thyssen@griffith...>
  * Fixed incorrect 'delta' increment calculation in Equal tile crop
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18322).

2011-12-01  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-10, SVN revision 6106.

2011-11-29  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * Delay reading TIFF EXIF properties to prevent premature exit.
  * Remove duplicates from the configuration file search path under Windows.
  * Use viewbox offset when setting affine transform translation (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19943).
  * Ensure equally sized tiles for -crop 11x2@ (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18322).
  * Recognize SI prefixes for jpeg:extent (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19944).

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-9, SVN revision 6092

2011-11-27  6.7.3-9 Cristy  <quetzlzacatenango@image...>
  * Upgrade libtool / ltdl to version 2.4.7.

2011-11-25  6.7.3-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-8, SVN revision 6084

2011-11-20  6.7.3-8 Cristy  <quetzlzacatenango@image...>
  * The exif:ExposureBiasValue property is a signed value.
  * Prevent buffer underflow for 1-bit PSD images.
  * Don't include alpha channel when computing range unless image->matte is
    set.
  * Set FILETYPE_REDUCEDIMAGE tag on pyramidal TIFF images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19892).
  * Correct image geometry for Postscript for hi-res bounding box (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19807).

2010-11-19  6.7.3-8 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with scaling Q16 background to PNG sub-8-bit bKGD and
    again disabled PNG_USE_CLONE in coders/png.c.
